templates/configmap.yaml

apiVersion: v1
kind: Pod
metadata:
  name: %use_configmap
spec:
  containers:
  - name: %name
    image: %image
    volumeMounts:
    - name: haproxy-cfg
      mountPath: /usr/local/etc/haproxy
    - name: spec-cfg
      mountPath: /usr/local/etc/dns

  volumes:
  - name: haproxy-cfg
    configMap:
      name: %name_cm
	- name: config
		configMap:
			name: %name_cm
			items:
			- key: resolv
				path: resolv.conf

---
# vim: et:ts=2:sw=2
