templates/deployment-beta.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: %name
  labels:
    app: %app
spec:
  replicas: 1
  template:
    metadata:
      name: %name
      labels:
        app: %app
    spec:
      containers:
      - name: calico-policy-controller
        image: quay.io/calico/kube-policy-controller:v0.6.0
        volumeMounts:
        - mountPath: /path1
          name: sec
        - mountPath: /path2
          name: simple
      volumes:
      - name: sec
        secret:
          secretName: secret
      - name: simple
        emptyDir: {}
      - name: pv
          persistentVolumeClaim:
            claimName: vol1

# vim: et:ts=2:sw=2
