templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: %name
  labels:
    app: %app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: %app
  template:
    metadata:
      labels:
        app: %app
    spec:
      containers:
      - name: %name
        image: docker-registry.cezdata.corp/image
        volumeMounts:
        - mountPath: /path1/secret
          name: sec
          subPath: secret
        - mountPath: /path2
          name: simple
        ports:
        - containerPort: <port>
          protocol: TCP
          name: <portname>
      volumes:
      - name: sec
        secret:
          secretName: secret
      - name: roots
        configMap:
          name: cfssl-roots
      - name: simple
        emptyDir: {}
      - name: pv
          persistentVolumeClaim:
            claimName: vol1

# vim: et:ts=2:sw=2
