templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: kibana
spec:
  rules:
  - host: kibana.cezdata.corp
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
